--- a/dashboard/html/header.ejs
+++ b/dashboard/html/header.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>NobuBot - An FGO-oriented Discord Bot</title>
     <style>
       body {
         margin: 0;
