--- a/dashboard/html/sidebar.ejs
+++ b/dashboard/html/sidebar.ejs
@@ -8,8 +8,8 @@
         <div class="content-item">
           <div class="title">Join us</div>
           <a href="https://discord.gg/VcYEefZ" class="social"><img src="/images/discord.png"></a>
-          <a href="https://discord.gg/VcYEefZ" class="social"><img src="/images/facebook.png"></a>
-          <a href="https://discord.gg/VcYEefZ" class="social"><img src="/images/github.png"></a>
+          <a href="https://www.facebook.com/AisterCode" class="social"><img src="/images/facebook.png"></a>
+          <a href="https://github.com/aister/nobuBot" class="social"><img src="/images/github.png"></a>
           <div style="clear: both"></div>
         </div>
         <div class="content-item">
