--- a/dashboard/html/footer.ejs
+++ b/dashboard/html/footer.ejs
@@ -1,6 +1,6 @@
 <div style="clear: both"></div>
 <div id="footer">
-  © 2018 Aister. All rights reserved.
+  © 2018 Gorgon. All rights reserved.
 </div>
 <script>
   var HOST = location.origin.replace(/^http/, 'ws')
@@ -8,7 +8,7 @@
   ws.onmessage = function (event) {
     event = JSON.parse(event.data);
     console.log(event);
-    switch(event.type) {
+    switch (event.type) {
       case "commandUsage":
         document.getElementById('commandCount').innerHTML = parseInt(document.getElementById('commandCount').innerHTML) + 1;
         break;
