--- a/dashboard/html/header.ejs
+++ b/dashboard/html/header.ejs
@@ -1,126 +1,173 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>NobuBot - An FGO-oriented Discord Bot</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: #efefef;
-      }
-      a {
-        color: #cb1435;
-        text-decoration: none;
-      }
-      #logo {
-        text-align: center;
-      }
-      #logo img {
-        width: 500px;
-      }
-      #menu {
-        background-color: #cb1435;
-        margin-top: 10px;
-      }
-      #menu ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        align-self: center;
-        justify-content: center;
-      }
-      #menu a {
-        display: block;
-        color: white;
-        font-weight: bold;
-        text-decoration: none;
-        padding: 30px;
-        transition: 0.5s;
-      }
-      #menu a:hover {
-        background-color: #940a23;
-      }
-      .title {
-        font-size: 25px;
-        font-weight: bold;
-        color: #cb1435;
-        padding: 5px 0;
-      }
-      .content {
-        width: 1000px;
-        margin: 0 auto;
-      }
-      .content-item {
-        margin-bottom: 30px;
-      }
-      .main {
-        width: 700px;
-        float: left;
-        padding: 10px;
-        box-sizing: border-box;
-      }
-      .itemName {
-        font-weight: bold;
-      }
-      .flex {
-        display: flex;
-        flex-wrap: wrap;
-      }
-      .command-name, .command-desc {
-        padding: 10px;
-        border-top: 1px solid #bdbdbd;
-        box-sizing: border-box
-      }
-      .command-name {
-        width: 25%;
-        font-weight: bold;
-      }
-      .command-desc {
-        width: 75%;
-      }
-      .args {
-        font-weight: bold;
-        text-decoration: underline;
-      }
-      .sidebar {
-        width: 300px;
-        float: right;
-        padding: 10px;
-        box-sizing: border-box;
-      }
-      .social {
-        width: 30%;
-        float: left;
-        background-size: auto 50px;
-        background-repeat: no-repeat;
-        background-position: center;
-        padding: 10px;
-        box-sizing: border-box;
-      }
-      .social img {
-        border-radius: 10px;
-        width: 100%;
-      }
-      .donation img {
-        height: 60px;
-      }
-      #footer {
-        padding: 30px 0;
-        text-align: center;
-        background-color: #cb1435;
-        color: white;
-      }
-    </style>
+
+<head>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <title>Gorgon - An FGO-oriented Discord Bot</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #efefef;
+      padding: 0;
+      font: 100%/150% calibri, helvetica, sans-serif;
+    }
+
+    a {
+      color: #cb1435;
+      text-decoration: none;
+    }
+
+    #logo {
+      text-align: center;
+      background: rgb(153, 7, 153);
+      background: linear-gradient(0deg, rgba(153, 7, 153, 1) 0%, rgba(87, 45, 106, 1) 66%);
+    }
+
+    #logo img {
+      width: 200px;
+    }
+
+    #menu {
+      /* background-color: #cb1435; */
+      background: rgb(153, 7, 153);
+      background: linear-gradient(180deg, rgba(153, 7, 153, 1) 0%, rgba(87, 45, 106, 1) 66%);
+      /* margin-top: 10px; */
+    }
+
+    #menu ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex;
+      align-self: center;
+      justify-content: center;
+    }
+
+    #menu a {
+      display: block;
+      color: white;
+      /* font-weight: bold; */
+      text-transform: uppercase;
+      text-decoration: none;
+      text-align: center center;
+      padding: 20px;
+      transition: 0.5s;
+    }
+
+    #menu a:hover {
+      border-radius: 10px;
+      background-color: rgba(87, 45, 106, 1);
+      
+    }
+
+    .title {
+      font-size: 25px;
+      font-weight: bold;
+      color: #cb1435;
+      padding: 5px 0;
+    }
+
+    .content {
+      width: 1000px;
+      margin: 0 auto;
+    }
+
+    .content-item {
+      margin-bottom: 30px;
+    }
+
+    .main {
+      width: 700px;
+      float: left;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .itemName {
+      font-weight: bold;
+    }
+
+    .flex {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .command-name,
+    .command-desc {
+      padding: 10px;
+      border-top: 1px solid #bdbdbd;
+      box-sizing: border-box
+    }
+
+    .command-name {
+      width: 25%;
+      font-weight: bold;
+    }
+
+    .command-desc {
+      width: 75%;
+    }
+
+    .args {
+      font-weight: bold;
+      text-decoration: underline;
+    }
+
+    .sidebar {
+      width: 300px;
+      float: right;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .social {
+      width: 30%;
+      float: left;
+      background-size: auto 50px;
+      background-repeat: no-repeat;
+      background-position: center;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .social img {
+      border-radius: 10px;
+      width: 100%;
+    }
+
+    .donation img {
+      height: 60px;
+    }
+
+    #footer {
+      padding: 30px 0;
+      text-align: center;
+      /* background-color: #cb1435; */
+      background: rgb(153, 7, 153);
+      background: linear-gradient(0deg, rgba(153, 7, 153, 1) 0%, rgba(87, 45, 106, 1) 66%);
+      color: white;
+    }
+  </style>
+
   <body>
-    <div id="logo"><img src="/images/logo.png"></div>
+    <div id="logo">
+      <img src="/images/logo.png">
+    </div>
     <div id="menu">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/command">Commands</a></li>
-        <li><a href="https://discordapp.com/oauth2/authorize?scope=bot&client_id=228126136192860160">Invite Bot</a></li>
-        <li><a href="https://www.paypal.me/Aister">Donate</a></li>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/command">Commands</a>
+        </li>
+        <li>
+          <a href="https://discordapp.com/oauth2/authorize?scope=bot&client_id=425501270665854976">Invite Bot</a>
+        </li>
+        <li>
+          <a href="https://paypal.me/dgeremia">Donate</a>
+        </li>
       </ul>
       <div style="clear: both"></div>
     </div>
