--- a/dashboard/html/sidebar.ejs
+++ b/dashboard/html/sidebar.ejs
@@ -1,19 +1,29 @@
-        <div class="content-item">
-          <div class="title">Live Count</div>
-          <div id="info">
-            <div class="item"><span class="itemName">Guilds: </span><span class="itemValue" id="guildCount"><%= guild %></span></div>
-            <div class="item"><span class="itemName">Commands: </span><span class="itemValue" id="commandCount"><%= command %></span></div>
-          </div>
-        </div>
-        <div class="content-item">
-          <div class="title">Join us</div>
-          <a href="https://discord.gg/VcYEefZ" class="social"><img src="/images/discord.png"></a>
-          <a href="https://www.facebook.com/AisterCode" class="social"><img src="/images/facebook.png"></a>
-          <a href="https://github.com/aister/nobuBot" class="social"><img src="/images/github.png"></a>
-          <div style="clear: both"></div>
-        </div>
-        <div class="content-item">
-          <div class="title">Donate</div>
-          A little bit of support goes a long way!
-          <a href="paypal.me/aister" class="donation"><img src="/images/paypal.png"></a>
-        </div>
+<div class="content-item">
+  <div class="title">Live Count</div>
+  <div id="info">
+    <div class="item">
+      <span class="itemName">Guilds: </span>
+      <span class="itemValue" id="guildCount">
+        <%= guild %>
+      </span>
+    </div>
+    <div class="item">
+      <span class="itemName">Commands: </span>
+      <span class="itemValue" id="commandCount">
+        <%= command %>
+      </span>
+    </div>
+  </div>
+</div>
+<div class="content-item">
+  <div class="title">Join us</div>
+  <a href="https://discord.gg/bdPtKgy" class="social"><img src="/images/discord.png"></a>
+  <a href="https://github.com/Jubokko/gorgon-bot" class="social"><img src="/images/github.png"></a>
+  <a href="https://github.com/aister/nobuBot" class="social"><img src="/images/github.png"></a>
+  <div style="clear: both"></div>
+</div>
+<div class="content-item">
+  <div class="title">Donate</div>
+  A little bit of support goes a long way!
+  <a href="https://paypal.me/dgeremia" class="donation"><img src="/images/paypal.png"></a>
+</div>
