--- a/dashboard/html/contact.ejs
+++ b/dashboard/html/contact.ejs
@@ -24,8 +24,8 @@
             <li>Fate Grand Order related commands, including Servant search, Item drop list and Profile</li>
             <li>Image Generation</li>
             <li>Pun and Straw commands</li>
-            <!-- <li>Valkyrie Crusade related commands, including Card search and Profile</li>
-            <li>And many more...</li> -->
+            <li>Valkyrie Crusade related commands, including Card search and Profile</li>
+            <li>And many more...</li>
           </ul>
         </div>
       </div>
